--- a/style.css
+++ b/style.css
@@ -1,7 +1,61 @@
+body {
+  background-color: #f1eee8;
+}
 h1 {
   text-align: center;
+  font-size: 40px;
+}
+
+h2 {
+  font-size: 28px;
+  margin-bottom: 5px;
+}
+
+select {
+  display: block;
+  width: 80%;
+  margin: 0 auto;
+  padding: 10px 7px;
+  border-radius: 6px;
+  font-size: 18px;
+}
+
+.container {
+  max-width: 600px;
+  margin: 60px auto;
+  background: #fff;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 7px;
+  padding: 25px;
+}
+
+.city {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 0;
+  padding: 30px 0;
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+}
+
+.city:last-child {
+  border: none;
+}
+
+.city-info {
+  margin-top: -12px;
+}
+
+.date {
+  opacity: 0.6;
+}
+
+.time {
+  font-size: 48px;
+  font-weight: bold;
 }
 
 footer {
   text-align: center;
+  font-size: 18px;
+  opacity: 0.7;
 }
