--- a/style.css
+++ b/style.css
@@ -50,6 +50,15 @@ select {
   font-weight: bold;
 }
 
+button {
+  display: block;
+  margin: 0 auto;
+  padding: 10px 20px;
+  border-radius: 10px;
+  background-color: rgb(138, 231, 231);
+  border: none;
+}
+
 footer {
   text-align: center;
   font-size: 18px;
