--- a/style.css
+++ b/style.css
@@ -1,14 +1,27 @@
 body {
-  background-color: #f1eee8;
+  background: linear-gradient(
+    109.6deg,
+    rgb(255, 251, 213) 11.2%,
+    rgb(178, 10, 44) 91.2%
+  );
+  background-repeat: no-repeat;
+  background-size: auto 200%;
+  font-family: "Besley", serif;
 }
+
 h1 {
   text-align: center;
   font-size: 40px;
+  border-style: inset;
+  border-radius: 7px;
+  color: #b20a2c;
 }
 
 h2 {
   font-size: 28px;
+  margin-top: 0;
   margin-bottom: 5px;
+  color: #7b0c3e;
 }
 
 select {
@@ -18,12 +31,16 @@ select {
   padding: 10px 7px;
   border-radius: 6px;
   font-size: 18px;
+  border: none;
+  background-color: #b9213c;
+  color: #fff;
+  text-align: center;
 }
 
 .container {
   max-width: 600px;
-  margin: 60px auto;
-  background: #fff;
+  margin: 45px auto;
+  background: #f6eedf69;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   border-radius: 7px;
   padding: 25px;
@@ -43,11 +60,13 @@ select {
 
 .date {
   opacity: 0.6;
+  color: #7b0c3e;
 }
 
 .time {
   font-size: 48px;
   font-weight: bold;
+  color: #7b0c3e;
 }
 
 button {
@@ -55,12 +74,25 @@ button {
   margin: 0 auto;
   padding: 10px 20px;
   border-radius: 10px;
-  background-color: rgb(138, 231, 231);
+  background-color: #b9213c;
+  color: #fff;
   border: none;
+  transition: 200ms ease-in-out;
+  font-size: 16px;
+}
+
+button:hover {
+  cursor: pointer;
+  color: #b9213c;
+  background-color: #fff;
 }
 
 footer {
   text-align: center;
   font-size: 18px;
-  opacity: 0.7;
+  opacity: 0.8;
+}
+
+a {
+  color: #630730;
 }
