--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ h1 {
   text-align: center;
   font-size: 40px;
   border-style: inset;
+  border-color: #f0ecec;
   border-radius: 7px;
   color: #7b0c3e;
 }
