--- a/style.css
+++ b/style.css
@@ -9,6 +9,33 @@ body {
   font-family: "Besley", serif;
 }
 
+.berlin {
+  background-image: url(https://images.unsplash.com/photo-1599946347371-68eb71b16afc?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.new-york {
+  background-image: url(https://images.unsplash.com/photo-1618861138969-0d7a9d315b1f?q=80&w=2129&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.melbourne {
+  background-image: url(https://images.unsplash.com/photo-1514395462725-fb4566210144?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.kolkata {
+  background-image: url(https://images.unsplash.com/photo-1649521973050-4f4eea8fa1d9?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.cairo {
+  background-image: url(https://images.unsplash.com/photo-1572252009286-268acec5ca0a?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 h1 {
   text-align: center;
   font-size: 40px;
@@ -17,14 +44,12 @@ h1 {
   border-radius: 7px;
   color: #7b0c3e;
 }
-
 h2 {
   font-size: 28px;
   margin-top: 0;
   margin-bottom: 5px;
   color: #7b0c3e;
 }
-
 select {
   display: block;
   width: 80%;
@@ -37,7 +62,6 @@ select {
   color: #fff;
   text-align: center;
 }
-
 .container {
   max-width: 600px;
   margin: 45px auto;
@@ -46,7 +70,6 @@ select {
   border-radius: 7px;
   padding: 25px;
 }
-
 .city {
   display: flex;
   justify-content: space-between;
@@ -54,11 +77,9 @@ select {
   padding: 30px 0;
   border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
 }
-
 .city:last-child {
   border: none;
 }
-
 .date {
   opacity: 0.6;
   color: #7b0c3e;
@@ -69,7 +90,6 @@ select {
   font-weight: bold;
   color: #7b0c3e;
 }
-
 button {
   display: block;
   margin: 0 auto;
@@ -81,19 +101,16 @@ button {
   transition: 200ms ease-in-out;
   font-size: 16px;
 }
-
 button:hover {
   cursor: pointer;
   color: #fff;
   background-color: #e9a106;
 }
-
 footer {
   text-align: center;
   font-size: 18px;
   opacity: 0.8;
 }
-
 a {
   color: #630730;
 }
